--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright The OpenTelemetry Authors
 # SPDX-License-Identifier: Apache-2.0
 
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.1)
 
 # See https://cmake.org/cmake/help/v3.3/policy/CMP0057.html required by certain
 # versions of gtest
@@ -204,14 +204,6 @@ option(WITH_OTLP_GRPC "Whether to include the OTLP gRPC exporter in the SDK"
 option(WITH_OTLP_HTTP "Whether to include the OTLP http exporter in the SDK"
        OFF)
 
-option(WITH_OTLP_FILE "Whether to include the OTLP file exporter in the SDK"
-       OFF)
-
-option(
-  WITH_OTLP_HTTP_COMPRESSION
-  "Whether to include gzip compression for the OTLP http exporter in the SDK"
-  OFF)
-
 option(WITH_ZIPKIN "Whether to include the Zipkin exporter in the SDK" OFF)
 
 option(WITH_PROMETHEUS "Whether to include the Prometheus Client in the SDK"
@@ -304,7 +296,7 @@ function(install_windows_deps)
   set(VCPKG_TARGET_ARCHITECTURE
       ${ARCH}
       PARENT_SCOPE)
-  message(STATUS "Installing build tools and dependencies...")
+  message("Installing build tools and dependencies...")
   set(ENV{ARCH} ${ARCH})
   execute_process(
     COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/tools/setup-buildtools.cmd)
@@ -312,8 +304,7 @@ function(install_windows_deps)
       ${CMAKE_CURRENT_SOURCE_DIR}/tools/vcpkg/scripts/buildsystems/vcpkg.cmake
       CACHE FILEPATH "")
   message(
-    STATUS
-      "Make sure that vcpkg.cmake is set as the CMAKE_TOOLCHAIN_FILE at the START of the cmake build process!
+    "Make sure that vcpkg.cmake is set as the CMAKE_TOOLCHAIN_FILE at the START of the cmake build process!
     Can be command-line arg (cmake -DCMAKE_TOOLCHAIN_FILE=...) or set in your editor of choice."
   )
 
@@ -351,7 +342,7 @@ include(GNUInstallDirs)
 if(WITH_PROMETHEUS)
   find_package(prometheus-cpp CONFIG QUIET)
   if(NOT prometheus-cpp_FOUND)
-    message(STATUS "Trying to use local prometheus-cpp from submodule")
+    message("Trying to use local prometheus-cpp from submodule")
     if(EXISTS ${PROJECT_SOURCE_DIR}/third_party/prometheus-cpp/.git)
       set(SAVED_ENABLE_TESTING ${ENABLE_TESTING})
       set(ENABLE_TESTING OFF)
@@ -365,17 +356,27 @@ if(WITH_PROMETHEUS)
           "git submodule update --init --recursive")
     endif()
   else()
-    message(STATUS "Using external prometheus-cpp")
+    message("Using external prometheus-cpp")
   endif()
 endif()
+
+set(Protobuf_PREFIX_PATH
+    "/usr/bin/protobuf/include"
+    "/usr/bin/protobuf/lib64"
+    "/usr/bin/protobuf/bin"
+	"/usr/bin/absl/include"
+	"/usr/bin/absl/lib64"
+)
+list(APPEND CMAKE_PREFIX_PATH "${Protobuf_PREFIX_PATH}")
+set(Protobuf_DIR "/usr/bin/protobuf/lib64/cmake/protobuf")
+set(protobuf_MODULE_COMPATIBLE ON CACHE BOOL "")
+set(Protobuf_PROTOC_EXECUTABLE "/usr/bin/protobuf/bin/protoc")
 
 if(WITH_ABSEIL)
   find_package(absl CONFIG REQUIRED)
 endif()
 
-if(WITH_OTLP_GRPC
-   OR WITH_OTLP_HTTP
-   OR WITH_OTLP_FILE)
+if(WITH_OTLP_GRPC OR WITH_OTLP_HTTP)
   find_package(Protobuf)
   if(Protobuf_VERSION AND Protobuf_VERSION VERSION_GREATER_EQUAL "3.22.0")
     if(NOT WITH_ABSEIL)
@@ -395,14 +396,14 @@ if(WITH_OTLP_GRPC
     endif()
 
     if(WIN32 AND (NOT DEFINED CMAKE_TOOLCHAIN_FILE))
-      message(FATAL_ERROR "Windows dependency installation failed!")
+      message(STATUS_FATAL "Windows dependency installation failed!")
     endif()
     if(WIN32)
       include(${CMAKE_TOOLCHAIN_FILE})
     endif()
 
     if(NOT Protobuf_FOUND AND NOT PROTOBUF_FOUND)
-      find_package(Protobuf REQUIRED)
+      find_package(Protobuf REQUIRED CONFIG)
     endif()
     if(NOT gRPC_FOUND AND WITH_OTLP_GRPC)
       find_package(gRPC)
@@ -460,25 +461,12 @@ if((NOT WITH_API_ONLY) AND WITH_HTTP_CLIENT_CURL)
 endif()
 
 #
-# Do we need ZLIB ?
-#
-
-if((NOT WITH_API_ONLY)
-   AND WITH_HTTP_CLIENT_CURL
-   AND WITH_OTLP_HTTP_COMPRESSION)
-  # No specific version required.
-  find_package(ZLIB REQUIRED)
-  message(STATUS "Found ZLIB: ${ZLIB_LIBRARIES}, version ${ZLIB_VERSION}")
-endif()
-
-#
 # Do we need NLOHMANN_JSON ?
 #
 
 if(WITH_ELASTICSEARCH
    OR WITH_ZIPKIN
    OR WITH_OTLP_HTTP
-   OR WITH_OTLP_FILE
    OR BUILD_W3CTRACECONTEXT_TEST
    OR WITH_ETW)
   set(USE_NLOHMANN_JSON ON)
@@ -492,7 +480,7 @@ endif()
 
 if(OTELCPP_MAINTAINER_MODE)
   if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    message(STATUS "Building with gcc in maintainer mode.")
+    message("Building with gcc in maintainer mode.")
 
     add_compile_options(-Wall)
     add_compile_options(-Werror)
@@ -500,7 +488,7 @@ if(OTELCPP_MAINTAINER_MODE)
 
     # Tested with GCC 9.4 on github.
     if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 9.4)
-      message(STATUS "Building with additional warnings for gcc.")
+      message("Building with additional warnings for gcc.")
 
       # Relaxed warnings
 
@@ -512,8 +500,6 @@ if(OTELCPP_MAINTAINER_MODE)
         $<$<STREQUAL:$<COMPILE_LANGUAGE>,CXX>:-Woverloaded-virtual>)
       add_compile_options(
         $<$<STREQUAL:$<COMPILE_LANGUAGE>,CXX>:-Wsuggest-override>)
-      add_compile_options(
-        $<$<STREQUAL:$<COMPILE_LANGUAGE>,CXX>:-Wold-style-cast>)
 
       # C and C++
       add_compile_options(-Wcast-qual)
@@ -525,7 +511,7 @@ if(OTELCPP_MAINTAINER_MODE)
       add_compile_options(-Wvla)
     endif()
   elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    message(STATUS "Building with clang in maintainer mode.")
+    message("Building with clang in maintainer mode.")
 
     add_compile_options(-Wall)
     add_compile_options(-Werror)
@@ -533,7 +519,7 @@ if(OTELCPP_MAINTAINER_MODE)
 
     # Tested with Clang 11.0 on github.
     if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 11.0)
-      message(STATUS "Building with additional warnings for clang.")
+      message("Building with additional warnings for clang.")
 
       # Relaxed warnings
       add_compile_options(-Wno-error=unused-private-field)
@@ -553,10 +539,9 @@ if(OTELCPP_MAINTAINER_MODE)
       add_compile_options(-Wundef)
       add_compile_options(-Wundefined-reinterpret-cast)
       add_compile_options(-Wvla)
-      add_compile_options(-Wold-style-cast)
     endif()
   elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    message(STATUS "Building with msvc in maintainer mode.")
+    message("Building with msvc in maintainer mode.")
 
     add_compile_options(/WX)
     add_compile_options(/W4)
@@ -626,8 +611,8 @@ if(BUILD_TESTING)
   if(GTEST_INCLUDE_DIRS)
     include_directories(SYSTEM ${GTEST_INCLUDE_DIRS})
   endif()
-  message(STATUS "GTEST_INCLUDE_DIRS   = ${GTEST_INCLUDE_DIRS}")
-  message(STATUS "GTEST_BOTH_LIBRARIES = ${GTEST_BOTH_LIBRARIES}")
+  message("GTEST_INCLUDE_DIRS   = ${GTEST_INCLUDE_DIRS}")
+  message("GTEST_BOTH_LIBRARIES = ${GTEST_BOTH_LIBRARIES}")
   enable_testing()
   if(WITH_BENCHMARK)
     # Benchmark respects the CMAKE_PREFIX_PATH
@@ -659,7 +644,7 @@ if(WITH_OPENTRACING)
   find_package(OpenTracing CONFIG QUIET)
   if(NOT OpenTracing_FOUND)
     set(OPENTRACING_DIR "third_party/opentracing-cpp")
-    message(STATUS "Trying to use local ${OPENTRACING_DIR} from submodule")
+    message("Trying to use local ${OPENTRACING_DIR} from submodule")
     if(EXISTS "${PROJECT_SOURCE_DIR}/${OPENTRACING_DIR}/.git")
       set(SAVED_BUILD_TESTING ${BUILD_TESTING})
       set(BUILD_TESTING OFF)
@@ -673,7 +658,7 @@ if(WITH_OPENTRACING)
           "git submodule update --init --recursive")
     endif()
   else()
-    message(STATUS "Using external opentracing-cpp")
+    message("Using external opentracing-cpp")
   endif()
   add_subdirectory(opentracing-shim)
 endif()
