--- a/examples/metrics_simple/CMakeLists.txt
+++ b/examples/metrics_simple/CMakeLists.txt
@@ -7,7 +7,7 @@ endif()
 
 include_directories(${CMAKE_SOURCE_DIR}/exporters/ostream/include)
 
-add_executable(metrics_ostream_example metrics_ostream.cc)
+add_executable(metrics_ostream_example metrics_main.cc)
 target_link_libraries(metrics_ostream_example ${CMAKE_THREAD_LIBS_INIT}
                       common_metrics_foo_library)
 
